added main and user swagger documentation
